--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "sonner": "^2.0.3",
     "swiper": "^11.2.6",
     "tailwind-merge": "^2.5.2",
